--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "scripts": {
     "test": "mocha"
   },
-
   "dependencies": {
-    "express": "^4.18.2"
-
+    "express": "^4.18.2",
+    "hbs": "^4.2.0"
   },
-  "devDependencies": {  
+  "devDependencies": {
     "chai": "^4.3.4",
-  "mocha": "^9.0.0"
+    "mocha": "^9.0.0"
   }
 }
