--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "hbs": "^4.2.0"
+    "express-session": "^1.17.3",
+    "hbs": "^4.2.0",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
